--- a/main.css
+++ b/main.css
@@ -19,7 +19,7 @@ body {
 	flex-direction: row;
 	min-height: 100vh;
 	color: #FFF;
-	background-image: url(15.png);
+	background-image: url(./15.png);
     
 }
 
